# synhunter

./: .gitignore  README.md
app/: index.html  package.json  webpack.config.js
app/src/: Board.vue  GameBoard.js  GameInput.vue  JsonRpc.js  Player.js  Tile.vue  index.js
backend/: Cargo.toml
backend/src/: main.rs  server.rs  structs.rs  wordlist.rs
words/: easy_words.txt
